<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xpresent.xpresent.ui.catalog.CategoriesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_certificates"
        android:name="com.xpresent.xpresent.ui.certificates.CertificatesFragment"
        android:label="@string/title_certificates"
        tools:layout="@layout/fragment_certificates" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.xpresent.xpresent.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
    </fragment>
</navigation>
