<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card_price"
            android:textAppearance="@style/TextAppearance.Title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:id="@+id/total_cashback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Card.Value.Bold"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/useCashBackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium" >
        <CheckBox
            android:id="@+id/cashbackCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="@dimen/padding_mini"
            android:buttonTint="@color/colorPrimary"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/margin_mini"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textAppearance="@style/TextAppearance.Card"
            android:textColor="@color/colorOnSurface"
            />
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/default_margin"
            android:alpha="0.25"
            android:src="@drawable/stroke_drawable"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/priceOldTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_base"
                android:textAppearance="@style/TextAppearance.Card"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/default_margin"/>

            <TextView
                android:id="@+id/oldPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/default_margin"
                android:alpha="0.5"
                android:foreground="@drawable/crossed_text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_with_discount"
                android:textAppearance="@style/TextAppearance.Card"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/default_margin"
                />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.Card.Value.Bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_price"
                android:textAppearance="@style/TextAppearance.Card"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/default_margin"
                />

            <TextView
                android:id="@+id/delivery_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="0"
                android:layout_marginEnd="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.Card.Value.Bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used_cashback"
                android:textAppearance="@style/TextAppearance.Card"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/default_margin"/>

            <TextView
                android:id="@+id/used_cashback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.Card.Value.Bold"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="0"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/default_margin"
            android:alpha="0.25"
            android:src="@drawable/stroke_drawable"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textAppearance="@style/TextAppearance.Card.Price.Medium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/default_margin" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.Card.Price"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>